# spatial_ml

./: .gitignore  README.md  data.dvc  docker-compose.yml  pyproject.toml  webmap.json
.dvc/: config
collector/: Dockerfile  README.md  pyproject.toml
collector/template/: __init__.py
collector/utils/: crawler.py  db_accessor.py  featureserver_downloader.py  file_hash_checker.py  gcp_storage.py  geo_locater.py  pdf_parser.py  playwright.py  playwright_util.py  selenium.py  smart_arg_parser.py
collector/utils/scrapers/: amlegal_scraper.py  municode_discovery.py  municode_scraper.py
collector/zoning_codes/: README.md  __init__.py  base.py  run.py  test.ipynb  upload_from_gcs.py  zoneomics.py
collector/zoning_ordinance/: README.md  __init__.py  base.py  boston.py  cambridge.py  depc_chicago.py  municode.py  run.py
frontend/: .eslintrc.json  CLAUDE_CANVAS_MVC_GUIDE.md  dvc-manifest-hash.txt  package-lock.json  package.json
frontend/src/canvas/: MapMediaCanvas.ts  editor.ts
frontend/src/components/: GeoMap.tsx  GeoReferencer.tsx  LabellerSidebar.tsx  Layout.tsx  OpacitySlider.tsx  PdfSelector.tsx  PdfViewer.tsx
frontend/src/data/: anniston-demo.ts
frontend/src/hooks/: useClipperEditor.ts  useLabels.ts  useLocationSearch.ts  usePdfs.ts  (+1 more)
model/: README.md
model/zoning_codes_extract/: trainer.py
processor/: pyproject.toml
processor/template/: __init__.py
pytorch_processor/: main.py  pyproject.toml
scripts/: arcgis_url_to_geojson.py  download_denver_zoning.sh  download_la_county_zoning.py  extract_denver_maps.py  split_pdf.py  update-manifest-hash.sh
(+152 files in other folders)
