[project]
name = "data-playwright"
version = "0.1.0"
description = "Data collector with Playwright for Next.js and bot-protected sites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "playwright==1.55.0",
    "us>=3.2.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "psycopg2-binary>=2.9.9",
    "google-cloud-storage>=2.19.0",
    "us>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
