[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "census>=0.8.24",
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "google-cloud-storage>=2.19.0",
    "ijson>=3.4.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "selenium>=4.27.1",
    "pymupdf>=1.26.5",
    "pytest>=8.4.2",
    "us>=3.2.0",
    "geopy>=2.4.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]


